k8/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: user-app
  labels:
    environment: production
    project: my-app
