k8/09-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: user-app
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    name: http
