k8/11-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: user-app
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
